# Space-Fortress

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  release.bat  release.py  scancodes.txt
.github/workflows/: cmake-multi-platform.yml
Game/: CMakeLists.txt  main.cpp
assets/shaders/: starfield.frag
cmake/: Tidy.cmake
codebase/: codebase.sln  release.py
codebase/codebase/: EventsManager.cpp  EventsManager.h  FileFunctions.cpp  FileFunctions.h  GUIBaseElement.h  Game.cpp  Game.h  GraphicsManager.cpp  GraphicsManager.h  JsonManager.cpp  JsonManager.h  LoggingManager.cpp  LoggingManager.h  Manager.h  ResourceManager.cpp  ResourceManager.h  SimplexNoise.cpp  SimplexNoise.h  TestGUI.cpp  TestGUI.h  TimeManager.cpp  TimeManager.h  Window.cpp  Window.h  codebase.vcxproj  codebase.vcxproj.filters  entt.h  main.cpp  packages.config
codebase/codebase/sol/: sol.hpp
config/: block_types.json
src/: attach-entity.hpp  block.cpp  block.hpp  box2d-debug.hpp  crewmate.cpp  crewmate.hpp  entity.hpp  grid.hpp  inputmanager.cpp  inputmanager.hpp  main.cpp  pathfinding.cpp  pathfinding.hpp  resources.hpp  root-entity.hpp  ship.hpp  time.hpp  units.hpp  world.cpp  world.hpp
src/entity/: attach-entity.hpp  entity.hpp  root-entity.hpp
src/entity/attach-entities/: crewmate.cpp  crewmate.hpp  machine.hpp  thruster.hpp
src/entity/root-entities/: ship.hpp
src/graphics/: fps-counter.hpp  starfield.hpp  tilemap.cpp  tilemap.hpp
src/graphics/tilemap/: tilemap.cpp  tilemap.h
